# GraphTestForAndroid

./: Loyihani_yaratish.md  README.md  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/uz/alien_dev/graphtestforandroid/: ExampleInstrumentedTest.kt
app/src/androidTest/java/uz/alien_dev/manipulatepixelsforgamedevelopment/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/uz/alien_dev/graphtestforandroid/: GraphAPI.kt  MainActivity.kt
app/src/main/java/uz/alien_dev/graphtestforandroid/activity/: ActivityBitmap.kt  ActivityCanvas.kt  ActivityCpp.kt  ActivityMain.kt  ActivityMatrix.kt  ActivityParent.kt  ActivityPixel1.kt  ActivityPixel2.kt
app/src/main/java/uz/alien_dev/manipulatepixelsforgamedevelopment/: MainActivity.kt
app/src/main/res/drawable/: ic_graph_test_foreground.xml
app/src/main/res/layout/: activity_bitmap.xml  activity_canvas.xml  activity_cpp.xml  activity_main.xml  activity_matrix.xml  activity_parent.xml  activity_pixel1.xml  activity_pixel2.xml
app/src/main/res/mipmap-anydpi-v26/: ic_graph_test_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/uz/alien_dev/graphtestforandroid/: ExampleUnitTest.kt
app/src/test/java/uz/alien_dev/manipulatepixelsforgamedevelopment/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
tests/: 1stTest.md
(+7 files in other folders)
